Upd part2 (assumptions)

--- a/part2.html
+++ b/part2.html
@@ -167,7 +167,7 @@ dose05or2 &lt;- subset(ToothGrowth, dose == &quot;0.5&quot; | dose == &quot;2&qu
 ## mean in group 0.5   mean in group 2 
 ##            10.605            26.100</code></pre>
 <p>P-values and confidence intervals of these t-tests, respectively:</p>
-<pre class="r"><code>doses &lt;- c(&quot;0.5 and 1&quot;, &quot;1 and 2&quot;, &quot;0.5 and 2&quot;)
+<pre class="r"><code>compared.doses &lt;- c(&quot;0.5 and 1&quot;, &quot;1 and 2&quot;, &quot;0.5 and 2&quot;)
 
 p.values &lt;- c(t.test(len ~ dose, data = dose05or2)$p.value, 
               t.test(len ~ dose, data = dose1or2)$p.value, 
@@ -181,11 +181,11 @@ conf.int.higher &lt;- round(c(t.test(len ~ dose, data = dose05or2)$conf.int[2],
                     t.test(len ~ dose, data = dose1or2)$conf.int[2], 
                     t.test(len ~ dose, data = dose05or2)$conf.int[2]), 3)
 
-data.frame(doses, p.values, conf.int.lower, conf.int.higher)</code></pre>
-<pre><code>##       doses     p.values conf.int.lower conf.int.higher
-## 1 0.5 and 1 4.397525e-14        -18.156         -12.834
-## 2   1 and 2 1.906430e-05         -8.996          -3.734
-## 3 0.5 and 2 4.397525e-14        -18.156         -12.834</code></pre>
+data.frame(compared.doses, p.values, conf.int.lower, conf.int.higher)</code></pre>
+<pre><code>##   compared.doses     p.values conf.int.lower conf.int.higher
+## 1      0.5 and 1 4.397525e-14        -18.156         -12.834
+## 2        1 and 2 1.906430e-05         -8.996          -3.734
+## 3      0.5 and 2 4.397525e-14        -18.156         -12.834</code></pre>
 <p>From these numbers, we can reject all of three null hypotheses and make a conclusion that <strong>dosage of Vitamin C affects tooth growth in guinea pigs</strong>.</p>
 </div>
 <div id="tooth-growth-by-supplement-type" class="section level3">
@@ -263,9 +263,9 @@ dose2 &lt;- subset(ToothGrowth, dose == &quot;2&quot;)</code></pre>
 ##            26.06            26.14</code></pre>
 <pre class="r"><code>doses &lt;- c(&quot;0.5&quot;, &quot;1&quot;, &quot;2&quot;)
 
-p.values &lt;- c(t.test(len ~ supp, data = dose05)$p.value, 
+p.values &lt;- round(c(t.test(len ~ supp, data = dose05)$p.value, 
               t.test(len ~ supp, data = dose1)$p.value, 
-              t.test(len ~ supp, data = dose2)$p.value)
+              t.test(len ~ supp, data = dose2)$p.value), 5)
 
 conf.int.lower &lt;- round(c(t.test(len ~ supp, data = dose05)$conf.int[1], 
                     t.test(len ~ supp, data = dose1)$conf.int[1], 
@@ -276,21 +276,22 @@ conf.int.higher &lt;- round(c(t.test(len ~ supp, data = dose05)$conf.int[2],
                     t.test(len ~ supp, data = dose2)$conf.int[2]), 3)
 
 data.frame(doses, p.values, conf.int.lower, conf.int.higher)</code></pre>
-<pre><code>##   doses    p.values conf.int.lower conf.int.higher
-## 1   0.5 0.006358607          1.719           8.781
-## 2     1 0.001038376          2.802           9.058
-## 3     2 0.963851589         -3.798           3.638</code></pre>
-<pre class="r"><code>with(ToothGrowth, t.test(len[supp==&quot;OJ&quot; &amp; dose==&quot;0.5&quot;], len[supp==&quot;VC&quot; &amp; dose==&quot;0.5&quot;]))$p.value</code></pre>
-<pre><code>## [1] 0.006358607</code></pre>
-<pre class="r"><code>with(ToothGrowth, t.test(len[supp==&quot;OJ&quot; &amp; dose==&quot;1&quot;], len[supp==&quot;VC&quot; &amp; dose==&quot;1&quot;]))$p.value</code></pre>
-<pre><code>## [1] 0.001038376</code></pre>
-<pre class="r"><code>with(ToothGrowth, t.test(len[supp==&quot;OJ&quot; &amp; dose==&quot;2&quot;], len[supp==&quot;VC&quot; &amp; dose==&quot;2&quot;]))$p.value</code></pre>
-<pre><code>## [1] 0.9638516</code></pre>
-<p>As we can see, delivery method <strong>does affect</strong> tooth growth in guinea pigs when dosage is 0.5 or 1, with <strong>orange juice causing more tooth growth</strong>. However, <strong>when dosage is 2 miligrams, orange juice does not significantly differ from ascorbic acid</strong>. If we take into consideration the fact that this dosage causes largest tooth growth, these two supplement types are equally successful.</p>
+<pre><code>##   doses p.values conf.int.lower conf.int.higher
+## 1   0.5  0.00636          1.719           8.781
+## 2     1  0.00104          2.802           9.058
+## 3     2  0.96385         -3.798           3.638</code></pre>
+<p>As we can see, delivery method <strong>does affect</strong> tooth growth in guinea pigs when dosage is 0.5 or 1, with <strong>orange juice causing more tooth growth</strong>. However, <strong>when dosage is 2 miligrams, orange juice does not significantly differ from ascorbic acid</strong>.</p>
 </div>
 </div>
-<div id="conclusions-and-assumptions" class="section level2">
-<h2>Conclusions and assumptions</h2>
+<div id="assumptions-and-conclusions" class="section level2">
+<h2>Assumptions and Conclusions</h2>
+<p>Assuming that (1) delivery method and dosage are randomly assigned, (2) population data is normally distributed, and (3) sample group is representative for the population, we can make several conclusions:</p>
+<ul>
+<li>higher doses of Vitamin C lead to larger tooth length in guinea pigs;</li>
+<li>orange juice is a more successful delivery method (comparing to ascorbic acid) when dosage os either 0.5 or 1 mg;</li>
+<li>when dosage is 2 mg, there is no significant difference between orange juice and ascorbic acid.</li>
+</ul>
+<p>In other words, if we needed our guinea pig to have long teeth, we could choose any delivery method and dosage of 2 mg.</p>
 </div>
 <div id="appendix" class="section level2">
 <h2>Appendix</h2>
